# openaerialmap

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  Justfile  README.md  compose.yaml  index.html  local.conf  mkdocs.yml  objects.inv  sitemap.xml
.github/workflows/: backend-stac-api-build-deploy copy.yml  backend-stac-api-build-deploy.yml  backend-stac-api-build.yml  backend-stac-ingester-build-deploy.yml  backend-tilepack-api-build-deploy.yml  backend-tilepack-worker-build-deploy.yml  deploy.yml  docs.yml  frontend-stac-map-build.yml  issue_label.yml  release_chart_global_tms.yaml  release_chart_tilepack_api.yaml
about/about/: index.html
about/faq/: index.html
about/timeline/: index.html
backend/global-mosaic/: Dockerfile  README.md  compose.yaml
backend/global-tms/: .gitignore  README.md  compose.yaml  gen-chart.sh  nginx.conf  style.json  tileserver.style.config
backend/stac-api/: Dockerfile  pyproject.toml
backend/stac-api/app/: main.py  settings.py
backend/stac-ingester/: README.md  pyproject.toml
backend/tilepack-api/: .gitignore  Dockerfile  README.md  compose.yaml  go.mod  go.sum
decisions/: index.html
decisions/0000-hotosm/: index.html
decisions/0001-stac/: index.html
decisions/0002-global-mosaic/: index.html
decisions/0003-global-tms/: index.html
decisions/0004-frontend-stack/: index.html
frontend/: Dockerfile  README.md  index.html  package.json  pnpm-lock.yaml  uno.config.ts  vite.config.mts  vite.config.ts
search/: search_index.json
stac-map/: .dockerignore  Dockerfile  nginx.conf
tasks/: start  test
(+80 files in other folders)
