[project]
name = "hotosm-stac-api"
version = "0.1.0"
description = "STAC API for HOTOSM based on stac-api-pgstac"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "stac-fastapi-pgstac[server]~=5.0.2",
    "hotosm-auth @ git+https://github.com/hotosm/login.git@auth-libs-v0.2.3#subdirectory=auth-libs/python",
]
